@@ -222,6 +222,7 @@ Version 1.5
  - Add Zipato PAN04 Micro Module Switch Double (Nechry)
  - Add Aeotec ZW141 Nano Shutter (Nechry)
  - Add Popp 700045 Universal Keypad (Nechry)
+ - Add Fibaro FGWPG111 Wall Plug (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
